--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,10 +1,28 @@
-{% extends "@FOSUser/layout.html.twig" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <!-- Meta, title, CSS, favicons, etc. -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-{% block stysheets %}
+        <!-- Bootstrap -->
+        <link href="{{ asset('vendor/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
+        <!-- Font Awesome -->
+        <link href="{{ asset('vendor/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet">
+        <!-- NProgress -->
+        <link href="{{ asset('vendor/nprogress/nprogress.css') }}" rel="stylesheet">
+        <!-- Animate.css -->
+        <link href="{{ asset('vendor/animate.css/animate.min.css') }}" rel="stylesheet">
 
+        <!-- Custom Theme Style -->
+        <link href="{{ asset('build/css/custom.min.css') }}" rel="stylesheet">
+</head>
 
-{% endblock %}
-{% block title %}<title>Madre Tierra</title> {% endblock %}
+   <title>Madre Tierra</title>
+
 {% block fos_user_content %}
     {{ include('@FOSUser/Security/login_content.html.twig') }}
 {% endblock fos_user_content %}
+</html>
