--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -1,8 +1,11 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    <div class="alert alert-danger" role="alert">
+        {{ error.messageKey|trans(error.messageData, 'security') }}
+    </div>
 {% endif %}
+
 <body class="login">
 <div>
     <a class="hiddenanchor" id="signup"></a>
@@ -47,41 +50,7 @@
             </section>
         </div>
 
-        <!--  <div id="register" class="animate form registration_form">
-              <section class="login_content">
-                  <form>
-                      <h1>Create Account</h1>
-                      <div>
-                          <input type="text" class="form-control" placeholder="Username" required="" />
-                      </div>
-                      <div>
-                          <input type="email" class="form-control" placeholder="Email" required="" />
-                      </div>
-                      <div>
-                          <input type="password" class="form-control" placeholder="Password" required="" />
-                      </div>
-                      <div>
-                          <a class="btn btn-default submit" href="index.html">Submit</a>
-                      </div>
 
-                      <div class="clearfix"></div>
-
-                      <div class="separator">
-                          <p class="change_link">Already a member ?
-                              <a href="#signin" class="to_register"> Log in </a>
-                          </p>
-
-                          <div class="clearfix"></div>
-                          <br />
-
-                          <div>
-                              <h1><i class="fa fa-paw"></i> Gentelella Alela!</h1>
-                              <p>©2016 All Rights Reserved. Gentelella Alela! is a Bootstrap 3 template. Privacy and Terms</p>
-                          </div>
-                      </div>
-                  </form>
-              </section>
-          </div>-->
     </div>
 </div>
 </body>
