--- a/app/Resources/FOSUserBundle/views/ChangePassword/change_password_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/change_password_content.html.twig
@@ -1,8 +1,33 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-{{ form_start(form, { 'action': path('fos_user_change_password'), 'attr': { 'class': 'fos_user_change_password' } }) }}
-    {{ form_widget(form) }}
-    <div>
-        <input type="submit" value="{{ 'change_password.submit'|trans }}" />
+<ul class="nav nav-tabs">
+    <li role="presentation" ><a href="/profile/edit">Editar usuario</a></li>
+    <li role="presentation"class="active"><a href="#">Cambiar contraseña</a></li>
+</ul>
+
+<div class="x_panel">
+    <div class="x_title">
+        <h2>Perfil de usuario <small></small></h2>
+        <ul class="nav navbar-right panel_toolbox">
+            <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+            </li>
+            <li><a class="close-link"><i class="fa fa-close"></i></a>
+            </li>
+        </ul>
+        <div class="clearfix"></div>
     </div>
-{{ form_end(form) }}
+    <div class="x_content ">
+        <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2">
+            {{ form_start(form, { 'action': path('fos_user_change_password'), 'attr': { 'class': 'fos_user_change_password' } }) }}
+            {{ form_widget(form) }}
+            <div>
+                <input class="btn btn-primary" type="submit" value="{{ 'change_password.submit'|trans }}" />
+            </div>
+            {{ form_end(form) }}
+
+        </div>
+    </div>
+</div>
+
+
+
