--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -1,6 +1,49 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-<div class="fos_user_user_show">
-    <p>{{ 'profile.show.username'|trans }}: {{ user.username }}</p>
-    <p>{{ 'profile.show.email'|trans }}: {{ user.email }}</p>
+
+<div class="x_panel">
+    <div class="x_title">
+        <h2>Perfil de usuario <small></small></h2>
+        <ul class="nav navbar-right panel_toolbox">
+            <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+            </li>
+            <li><a class="close-link"><i class="fa fa-close"></i></a>
+            </li>
+        </ul>
+        <div class="clearfix"></div>
+    </div>
+    <div class="x_content col-md-10 col-sm-10 col-xs-12">
+        <div class="col-md-10 col-sm-10 col-xs-12 profile_left">
+            <h3> <p>{{ user.username }}</p></h3>
+
+            <ul class="list-unstyled user_data">
+                <li><i class="fa fa-user user-profile-icon"></i> {{ user.apellidos }},{{ user.nombres }}
+                </li>
+                <br />
+                <li class="m-top-xs">
+                    <i class="fa fa-envelope-o user-profile-icon"></i>
+                   {{ user.email }}
+                </li>
+                <br />
+                <li>
+                    <i class="fa fa-clock-o user-profile-icon">{{ user.lastLogin|date('Y-m-d H:i:s')}}</i>
+                </li>
+
+            </ul>
+
+            <br />
+
+        </div>
+        <div class="col-md-9 col-sm-9 col-xs-12">
+
+            <div class="profile_title">
+
+
+            </div>
+            <!-- start of user-activity-graph -->
+            <div id="graph_bar" style="width:100%; height:280px;"></div>
+            <!-- end of user-activity-graph -->
+
+        </div>
+    </div>
 </div>
