--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -1,9 +1,12 @@
 
 {% trans_default_domain 'FOSUserBundle' %}
-
+<div class="col-lg-6 col-lg-offset-3">
 {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
-    {{ form_widget(form) }}
+    <div class="form_row">
+            {{ form_widget(form) }}
+    </div>
     <div>
-        <input type="submit" value="{{ 'registration.submit'|trans }}" />
+        <input class="btn btn-primary" type="submit" value="{{ 'registration.submit'|trans }}" />
     </div>
 {{ form_end(form) }}
+</div>
