--- a/app/Resources/FOSUserBundle/views/Resetting/reset_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/reset_content.html.twig
@@ -1,7 +1,9 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {{ form_start(form, { 'action': path('fos_user_resetting_reset', {'token': token}), 'attr': { 'class': 'fos_user_resetting_reset' } }) }}
-    {{ form_widget(form) }}
+   <div class="form-group">
+       {{ form_widget(form) }}
+   </div>
     <div>
         <input type="submit" value="{{ 'resetting.reset.submit'|trans }}" />
     </div>
