--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -2,7 +2,7 @@
 
     {% block title %}<title> </title>{% endblock %}
 
-
+{% block namePageTitle %}<h3></h3>{% endblock %}
  {% block x_panel %}
 
                 {% if app.request.hasPreviousSession %}
