--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -60,12 +60,7 @@
                     <div class="menu_section">
                         <h3>General</h3>
                         <ul class="nav side-menu">
-                            <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
-                                <ul class="nav child_menu">
-                                    <li><a href="index.html">Dashboard</a></li>
-                                    <li><a href="index2.html">Dashboard2</a></li>
-                                    <li><a href="index3.html">Dashboard3</a></li>
-                                </ul>
+                            <li><a><i class="fa fa-home"></i> Home</a>
                             </li>
                             <li><a><i class="fa fa-user"></i>Usuarios <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
@@ -78,45 +73,29 @@
                         </ul>
                     </div>
                     <div class="menu_section">
-                        <h3>Live On</h3>
+                        <h3>Reportes</h3>
                         <ul class="nav side-menu">
-                            <li><a><i class="fa fa-bug"></i> Additional Pages <span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="fa fa-file-text"></i> Reportes Estrategicos <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="e_commerce.html">E-commerce</a></li>
-                                    <li><a href="projects.html">Projects</a></li>
-                                    <li><a href="project_detail.html">Project Detail</a></li>
-                                    <li><a href="contacts.html">Contacts</a></li>
-                                    <li><a href="profile.html">Profile</a></li>
+                                    <li><a href="{{ path('efiGlobalComercial') }}">Inidcadores de Efciencia Global y Comercial</a></li>
+                                    <li><a href="{{ path('rentabilidad') }}">Rentabilidad</a></li>
+                                    <li><a href="{{ path('cont_servicio') }}">Continuidad del Servicio</a></li>
+                                    <li><a href="{{ path('cob_micromedicion') }}">Cobertura de Micromedición</a></li>
+                                    <li><a href="{{ path('reclamos') }}">Profile</a></li>
                                 </ul>
                             </li>
-                            <li><a><i class="fa fa-windows"></i> Extras <span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="fa fa-file-text-o"></i> Reportes Tácticos <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="page_403.html">403 Error</a></li>
-                                    <li><a href="page_404.html">404 Error</a></li>
-                                    <li><a href="page_500.html">500 Error</a></li>
-                                    <li><a href="plain_page.html">Plain Page</a></li>
-                                    <li><a href="login.html">Login Page</a></li>
-                                    <li><a href="pricing_tables.html">Pricing Tables</a></li>
+                                    <li><a href="{{ path('consumo_agua') }}">Consumo de Agua</a></li>
+                                    <li><a href="{{ path('eficiencia_fisica') }}">Eficiencia Fisica</a></li>
+                                    <li><a href="{{ path('indicador_energetico') }}">Inidicador Energetico</a></li>
+                                    <li><a href="{{ path('dotacion_habitante') }}">Dotación por habitante</a></li>
+                                    <li><a href="{{ path('acom_activas') }}">Acometidas Activas</a></li>
+                                    <li><a href="{{ path('mayor_consumo') }}">Clientes con mayor consumo</a></li>
                                 </ul>
                             </li>
-                            <li><a><i class="fa fa-sitemap"></i> Multilevel Menu <span class="fa fa-chevron-down"></span></a>
-                                <ul class="nav child_menu">
-                                    <li><a href="#level1_1">Level One</a>
-                                    <li><a>Level One<span class="fa fa-chevron-down"></span></a>
-                                        <ul class="nav child_menu">
-                                            <li class="sub_menu"><a href="level2.html">Level Two</a>
-                                            </li>
-                                            <li><a href="#level2_1">Level Two</a>
-                                            </li>
-                                            <li><a href="#level2_2">Level Two</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#level1_2">Level One</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li><a href="javascript:void(0)"><i class="fa fa-laptop"></i> Landing Page <span class="label label-success pull-right">Coming Soon</span></a></li>
+
+
                         </ul>
                     </div>
 
