--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,57 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <!-- Meta, title, CSS, favicons, etc. -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <!-- Bootstrap -->
-        <link href="{{ asset('vendor/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
-        <!-- Font Awesome -->
-        <link href="{{ asset('vendor/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet">
-        <!-- NProgress -->
-        <link href="{{ asset('vendor/nprogress/nprogress.css') }}" rel="stylesheet">
-        <!-- Animate.css -->
-        <link href="{{ asset('vendor/animate.css/animate.min.css') }}" rel="stylesheet">
-
-        <!-- Custom Theme Style -->
-        <link href="{{ asset('build/css/custom.min.css') }}" rel="stylesheet">
-</head>
-
-   <title>Madre Tierra</title>
-{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header" style="background: #e7e7e7">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a >
-                    {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }}
-                </a></li>
-                <li><a href="{{ path('fos_user_security_logout') }}">
-                        {{ 'layout.logout'|trans({},'FOSUserBundle')}}
-                    </a></li>
-
-            </ul>
-        </div><!--/.nav-collapse -->
-
-    </div>
-</nav>
-{% endif %}
-<div>
+{% extends "layoutlogin.html.twig" %}
 {% block fos_user_content %}
     {{ include('@FOSUser/Security/login_content.html.twig') }}
 {% endblock fos_user_content %}
-</div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="{{ asset('vendor/bootstrap/dist/js/bootstrap.min.js') }}"></script>
-</html>
