--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -30,6 +30,16 @@
 
 
                     <input class="btn btn-primary col-lg-4 " type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+
+                    <div class="clearfix"></div>
+                    <br />
+
+                    <div class="separator">
+                        <p class="change_link">
+                            <a href="/resetting/request" class="to_register">¿Olvidaste tu contraseña? </a>
+                        </p>
+
+                        </div>
                 </form>
                 {% if error %}
                     <div class="alert alert-danger">
