--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -80,7 +80,7 @@
 
                             {% endif %}
 
-                            {% if( is_granted('ROLE_STRATEGIC') or is_granted('ROLE_SUPER_ADMIN')  )  %}
+                            {% if( is_granted('ROLE_STRATEGIC')  )  %}
                             <li><a><i class="fa fa-home"></i> Estrategico<span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
                                     <li><a href="index.html">Indicador 1</a></li>
@@ -90,7 +90,7 @@
                             </li>
                             {% endif %}
 
-                            {% if ( is_granted('ROLE_TACTICO')  or is_granted('ROLE_SUPER_ADMIN')  ) %}
+                            {% if ( is_granted('ROLE_TACTICO')  ) %}
                                 <li><a><i class="fa fa-home"></i>Tactico<span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
                                         <li><a href="index.html">Indicador 1</a></li>
