--- a/app/Resources/views/layoutlogin.html.twig
+++ b/app/Resources/views/layoutlogin.html.twig
@@ -21,6 +21,7 @@
 </head>
 
 <title>Madre Tierra</title>
+{% block body %}
 {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -52,6 +53,8 @@
 
     {% endblock fos_user_content %}
 </div>
+
+{% endblock body %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="{{ asset('vendor/bootstrap/dist/js/bootstrap.min.js') }}"></script>
 </html>
