--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {% block title %}<title>Madre Tierra </title>{% endblock %}
-
+{% block stylesheets %}
         <!-- Bootstrap -->
         <link href="{{ asset('vendor/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
         <!-- Font Awesome -->
@@ -30,6 +30,7 @@
 
         <!-- Custom Theme Style -->
         <link href="{{ asset('build/css/custom.min.css') }}" rel="stylesheet">
+    {% endblock stylesheets %}
 </head>
 
 <body class="nav-md">
@@ -60,12 +61,8 @@
                     <div class="menu_section">
                         <h3>General</h3>
                         <ul class="nav side-menu">
-                            <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
-                                <ul class="nav child_menu">
-                                    <li><a href="index.html">Dashboard</a></li>
-                                    <li><a href="index2.html">Dashboard2</a></li>
-                                    <li><a href="index3.html">Dashboard3</a></li>
-                                </ul>
+                            <li><a href="/"><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
+
                             </li>
 
                             {% if is_granted('ROLE_SUPER_ADMIN') %}
@@ -78,14 +75,24 @@
                                 </ul>
                             </li>
 
+                                <li><a><i class="fa fa-database"></i>Base de datos <span class="fa fa-chevron-down"></span></a>
+                                    <ul class="nav child_menu">
+                                        <li><a href="#"> Nuevo usuario</a></li>
+                                        <li><a href="#"> Lista de usuarios</a></li>
+
+                                    </ul>
+                                </li>
+
                             {% endif %}
 
                             {% if( is_granted('ROLE_STRATEGIC')  )  %}
                             <li><a><i class="fa fa-home"></i> Estrategico<span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="index.html">Indicador 1</a></li>
-                                    <li><a href="index2.html">Indicador 2</a></li>
-                                    <li><a href="index3.html">Indicador 3</a></li>
+                                    <li><a href="/reportes-estrategicos/eficiencia-global-comercial">Eficiencia Global y comercial</a></li>
+                                    <li><a href="/reportes-estrategicos/indicador-rentabilidad">Rentabilidad</a></li>
+                                    <li><a href="/reportes-estrategicos/cont-servicio">Continuidad del servicio</a></li>
+                                    <li><a href="/reportes-estrategicos/cob-micromedicion">Cobertura de micromedición</a></li>
+                                    <li><a href="/reportes-estrategicos/resp-reclamos">Tiempo de respuesta a reclamos</a></li>
                                 </ul>
                             </li>
                             {% endif %}
@@ -93,9 +100,12 @@
                             {% if ( is_granted('ROLE_TACTICO')  ) %}
                                 <li><a><i class="fa fa-home"></i>Tactico<span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
-                                        <li><a href="index.html">Indicador 1</a></li>
-                                        <li><a href="index2.html">Indicador 2</a></li>
-                                        <li><a href="index3.html">Indicador 3</a></li>
+                                        <li><a href="/reportes-tacticos/consumo-agua">Consumo de Agua por rango de tarifa</a></li>
+                                        <li><a href="/reportes-tacticos/eficiencia-fisica">Eficiencia fisica</a></li>
+                                        <li><a href="/reportes-tacticos/indicador-energetico">Indicador energético</a></li>
+                                        <li><a href="/reportes-tacticos/dotacion-habitante">Dotación de agua disponible por habitante</a></li>
+                                        <li><a href="/reportes-tacticos/acometidas-activas">Acometidas activas</a></li>
+                                        <li><a href="/reportes-tacticos/mayor-consumo">Clientes con mayor consumo</a></li>
                                     </ul>
                                 </li>
                             {% endif %}
@@ -104,68 +114,20 @@
                         </ul>
                     </div>
                     <div class="menu_section">
-                        <h3>Live On</h3>
+
                         <ul class="nav side-menu">
-                            <li><a><i class="fa fa-bug"></i> Additional Pages <span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="glyphicon glyphicon-cog"></i> Configuración <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="e_commerce.html">E-commerce</a></li>
-                                    <li><a href="projects.html">Projects</a></li>
-                                    <li><a href="project_detail.html">Project Detail</a></li>
-                                    <li><a href="contacts.html">Contacts</a></li>
-                                    <li><a href="profile.html">Profile</a></li>
+                                    <li><a href="/profile/edit">Editar perfil</a></li>
+                                    <li><a href="/profile/change-password">Cambiar contraseña</a></li>
                                 </ul>
                             </li>
-                            <li><a><i class="fa fa-windows"></i> Extras <span class="fa fa-chevron-down"></span></a>
-                                <ul class="nav child_menu">
-                                    <li><a href="page_403.html">403 Error</a></li>
-                                    <li><a href="page_404.html">404 Error</a></li>
-                                    <li><a href="page_500.html">500 Error</a></li>
-                                    <li><a href="plain_page.html">Plain Page</a></li>
-                                    <li><a href="login.html">Login Page</a></li>
-                                    <li><a href="pricing_tables.html">Pricing Tables</a></li>
-                                </ul>
-                            </li>
-                            <li><a><i class="fa fa-sitemap"></i> Multilevel Menu <span class="fa fa-chevron-down"></span></a>
-                                <ul class="nav child_menu">
-                                    <li><a href="#level1_1">Level One</a>
-                                    <li><a>Level One<span class="fa fa-chevron-down"></span></a>
-                                        <ul class="nav child_menu">
-                                            <li class="sub_menu"><a href="level2.html">Level Two</a>
-                                            </li>
-                                            <li><a href="#level2_1">Level Two</a>
-                                            </li>
-                                            <li><a href="#level2_2">Level Two</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#level1_2">Level One</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li><a href="javascript:void(0)"><i class="fa fa-laptop"></i> Landing Page <span class="label label-success pull-right">Coming Soon</span></a></li>
+
                         </ul>
                     </div>
 
                 </div>
-                <!-- /sidebar menu -->
 
-                <!-- /menu footer buttons -->
-                <div class="sidebar-footer hidden-small">
-                    <a data-toggle="tooltip" data-placement="top" title="Settings">
-                        <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-                    </a>
-                    <a data-toggle="tooltip" data-placement="top" title="FullScreen">
-                        <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
-                    </a>
-                    <a data-toggle="tooltip" data-placement="top" title="Lock">
-                        <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
-                    </a>
-                    <a data-toggle="tooltip" data-placement="top" href="{{ path('fos_user_security_logout') }}">
-                        <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
-                    </a>
-
-
-                </div>
                 <!-- /menu footer buttons -->
             </div>
         </div>
@@ -267,7 +229,7 @@
             <div class="">
                 <div class="page-title">
                     <div class="title_left">
-                        {% block namePageTitle %}<h3>Bienvenidos</h3>{% endblock %}
+                        {% block namePageTitle %}<h3></h3>{% endblock %}
                     </div>
 
                 </div>
