actualizacion de iconos

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -83,11 +83,11 @@
         <div class="x_content">
             <div class="col-md-3 cuadro">
                 <div class="col-md-7">
-                <br/>
+
                     <b>EFICIENCIA GLOBAL Y COMERCIAL</b>
                 </div>
                 <a class="col-md-4 cuadroHijo text-center" href="/reportes-estrategicos/eficiencia-global-comercial">
-                    <span class="fa fa-archive"></span>
+                    <span class="glyphicon glyphicon-globe"></span>
                 </a>
             </div>
             <div class="col-md-3 cuadro">
@@ -96,7 +96,7 @@
                     <b>RENTABILIDAD</b>
                 </div>
                 <a class="col-md-4 cuadroHijo text-center" href="/reportes-estrategicos/indicador-rentabilidad">
-                    <span class="fa fa-database"></span>
+                    <span class="fa fa-usd"></span>
                 </a>
             </div>
 
@@ -106,27 +106,27 @@
                     <b>CONTINUIDAD DEL SERVICIO</b>
                 </div>
                 <a class="col-md-4 cuadroHijo text-center" href="/reportes-estrategicos/cont-servicio">
-                    <span class="fa fa-database"></span>
+                    <span class="fa fa-tint"></span>
                 </a>
             </div>
 
             <div class="col-md-3 cuadro">
                 <div class="col-md-7">
-                    <br/>
+
                     <b>COBERTURA DE MICROMEDICION</b>
                 </div>
                 <a class="col-md-4 cuadroHijo text-center" href="/reportes-estrategicos/indicador-rentabilidad">
-                    <span class="fa fa-database"></span>
+                    <span class="glyphicon glyphicon-map-marker"></span>
                 </a>
             </div>
 
             <div class="col-md-3 cuadro">
                 <div class="col-md-7">
-                    <br/>
+
                     <b>TIEMPO DE RESPUESTA A RECLAMOS</b>
                 </div>
                 <a class="col-md-4 cuadroHijo text-center" href="/reportes-estrategicos/resp-reclamos">
-                    <span class="fa fa-database"></span>
+                    <span class="fa fa-clock-o"></span>
                 </a>
             </div>
         </div>
@@ -151,7 +151,7 @@
                     <b>CONSUMO POR RANGO DE TARIFA</b>
                 </div>
                 <a class="col-md-4 cuadroHijo text-center" href="/reportes-tacticos/consumo-agua">
-                    <span class="fa fa-archive"></span>
+                    <span class="fa fa-tint"></span>
                 </a>
             </div>
             <div class="col-md-3 cuadro">
@@ -160,7 +160,7 @@
                     <b>EFICIENCIA FISICA</b>
                 </div>
                 <a class="col-md-4 cuadroHijo text-center" href="/reportes-tacticos/eficiencia-fisica">
-                    <span class="fa fa-database"></span>
+                    <span class="fa fa-tree"></span>
                 </a>
             </div>
 
@@ -170,7 +170,7 @@
                     <b>INDICADOR ENERGETICO</b>
                 </div>
                 <a class="col-md-4 cuadroHijo text-center" href="/reportes-tacticos/indicador-energetico">
-                    <span class="fa fa-archive"></span>
+                    <span class="fa fa-bolt"></span>
                 </a>
             </div>
 
@@ -179,7 +179,7 @@
                     <b>DISPONIBILIDAD POR HABITANTE</b>
                 </div>
                 <a class="col-md-4 cuadroHijo text-center" href="/reportes-tacticos/dotacion-habitante">
-                    <span class="fa fa-archive"></span>
+                    <span class="fa fa-male"></span>
                 </a>
             </div>
 
@@ -189,17 +189,17 @@
                     <b>ACOMETIDAS ACTIVAS</b>
                 </div>
                 <a class="col-md-4 cuadroHijo text-center" href="/reportes-tacticos/acometidas-activas">
-                    <span class="fa fa-archive"></span>
+                    <span class="fa fa-home"></span>
                 </a>
             </div>
 
             <div class="col-md-3 cuadro">
                 <div class="col-md-7">
-                   
+
                     <b>CLIENTES CON MAYOR CONSUMO</b>
                 </div>
                 <a class="col-md-4 cuadroHijo text-center" href="/reportes-tacticos/mayor-consumo">
-                    <span class="fa fa-archive"></span>
+                    <span class="fa fa-line-chart"></span>
                 </a>
             </div>
         </div>
