--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -61,7 +61,7 @@
                     <div class="menu_section">
                         <h3>General</h3>
                         <ul class="nav side-menu">
-                            <li><a href="/"><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
+                            <li><a href="/"><i class="fa fa-home"></i> Home </a>
 
                             </li>
 
@@ -86,7 +86,7 @@
                             {% endif %}
 
                             {% if( is_granted('ROLE_STRATEGIC')  )  %}
-                            <li><a><i class="fa fa-home"></i> Estrategico<span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="fa fa-line-chart"></i> Estrategico<span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
                                     <li><a href="/reportes-estrategicos/eficiencia-global-comercial">Eficiencia Global y comercial</a></li>
                                     <li><a href="/reportes-estrategicos/indicador-rentabilidad">Rentabilidad</a></li>
@@ -98,7 +98,7 @@
                             {% endif %}
 
                             {% if ( is_granted('ROLE_TACTICO')  ) %}
-                                <li><a><i class="fa fa-home"></i>Tactico<span class="fa fa-chevron-down"></span></a>
+                                <li><a><i class="fa fa-bar-chart"></i>Tactico<span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
                                         <li><a href="/reportes-tacticos/consumo-agua">Consumo de Agua por rango de tarifa</a></li>
                                         <li><a href="/reportes-tacticos/eficiencia-fisica">Eficiencia fisica</a></li>
