--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -49,18 +49,9 @@
             <div class="col-md-3 cuadro">
                 <div class="col-md-7">
                     <br/>
-                    <b>CREAR RESPALDO</b>
+                    <b>BASE DE DATOS</b>
                 </div>
-                <a class="col-md-4 cuadroHijo text-center" href="#">
-                    <span class="fa fa-archive"></span>
-                </a>
-            </div>
-            <div class="col-md-3 cuadro">
-                <div class="col-md-7">
-                    <br/>
-                    <b>IMPORTAR DATOS</b>
-                </div>
-                <a class="col-md-4 cuadroHijo text-center" href="#">
+                <a class="col-md-4 cuadroHijo text-center" href="/respaldo-DB">
                     <span class="fa fa-database"></span>
                 </a>
             </div>
@@ -160,7 +151,7 @@
                     <b>EFICIENCIA FISICA</b>
                 </div>
                 <a class="col-md-4 cuadroHijo text-center" href="/reportes-tacticos/eficiencia-fisica">
-                    <span class="fa fa-tree"></span>
+                    <span class="fa fa-calculator"></span>
                 </a>
             </div>
 
