--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -107,7 +107,7 @@
                                     <li><a href="{{ path('rentabilidad') }}">Rentabilidad</a></li>
                                     <li><a href="{{ path('cont_servicio') }}">Continuidad del Servicio</a></li>
                                     <li><a href="{{ path('cob_micromedicion') }}">Cobertura de Micromedición</a></li>
-                                    <li><a href="{{ path('reclamos') }}">Profile</a></li>
+                                    <li><a href="{{ path('reclamos') }}">Respuest a Reclamos</a></li>
                                 </ul>
                             </li>
                             <li><a><i class="fa fa-file-text-o"></i> Reportes Tácticos <span class="fa fa-chevron-down"></span></a>
@@ -160,7 +160,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="">
                             <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }}
+                                {{ 'layfa faout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }}
                                 <span class=" fa fa-angle-down"></span>
                             </a>
                             <ul class="dropdown-menu dropdown-usermenu pull-right">
