--- a/app/Resources/views/RepEstrategicos/CapturaDatos/rep_res_eficiencia_com_glo.html.twig
+++ b/app/Resources/views/RepEstrategicos/CapturaDatos/rep_res_eficiencia_com_glo.html.twig
@@ -1,11 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block namePageTitle %}<h3>{{ pageHeader }}</h3> {% endblock %}
 {% block x_panel %}
-    <style>
-        input[type="radio"]+label{
-            padding-right: 2em;
-        }
-    </style>
     <div class="x_panel">
         <div class="x_title">
             <h2>Parametros del Reporte</h2>
@@ -13,29 +8,16 @@
         </div>
         <div class="x_content">
             <br/>
-            {{  form_start(form, {'attr': {'class' : 'form-horizontal'}}) }}
-            <div class="col-md-12 col-sm-12 col-xs-12">
-                <div class="form-group col-md-6 col-sm-6 col-xs-12">
-                    {{ form_label(form.periodo, 'Período: ', {'label_attr' : {'class' : 'control-label col-md-2 col-sm-1 col-xs-12'}}) }}
-                        <div class="col-md-6 col-sm-6 col-xs-12">
-                            {{ form_widget(form.periodo, {'attr' : {'class' : 'form-control col-md-7 col-xs-12'}}) }}
-                        </div>
-                    {{ form_errors(form.periodo, {'attr' : {'class' : 'alert'}}) }}
-
+           {{  form_start(form, {'attr': {'class' : 'form-horizontal'}}) }}
+            <div class="form-group col-md-12 col-sm-12 col-xs-12">
+                {{ form_label(form.periodo, 'Período: ', {'label_attr' : {'class' : 'control-label col-md-1 col-sm-1 col-xs-12'}}) }}
+                <div class="col-md-12">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        {{ form_widget(form.periodo, {'attr' : {'class' : 'form-control col-md-7 col-xs-12'}}) }}
+                    </div>
                 </div>
-                <div class="form-group col-md-6 col-sm-6 col-xs-12">
-                    {{ form_label(form.tarifa, 'Tarifa: ', {'label_attr' : {'class' : 'control-label col-md-2 col-sm-2 col-xs-12'}}) }}
-                        <div class="col-md-6 col-sm-6 col-xs-12">
-                            {{ form_widget(form.tarifa, {'attr' : {'class' : 'form-control col-md-7 col-xs-12'}}) }}
-                        </div>
-                    {{ form_errors(form.tarifa, {'attr' : {'class' : 'alert'}}) }}
+                {{ form_errors(form.periodo, {'attr' : {'class' : 'alert'}}) }}
 
-                </div>
-            </div>
-            <br />
-            <div class="co-md-12 col-sm-12 col-xs-12">
-                <label class="control-label col-md-2 col-sm-2 col-xs-12">Tipo de Cliente: </label>
-                {{ form_widget(form.tipo_cliente) }}
             </div>
             <br />
             <div class="col-md-12 col-sm-12 col-xs-12">
@@ -73,11 +55,32 @@
             <div class="form-group"></div>
             <div class="ln_solid"></div>
             <div class="form-group">
-                <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-1">
-                    {{ form_widget(form.send, {'attr' : {'class' : "btn btn-success" }}) }}
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    {{ form_widget(form.send, {'attr' : {'class' : "btn btn-primary" }}) }}
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <button type="button" class="btn btn-default">Anterior</button>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <button type="reset" class="btn btn-danger">Limpiar</button>
                 </div>
             </div>
+            <br />
+            {% if data is defined %}
+                {% block previewTable %}
+
+                {% endblock previewTable %}
+                <div class="form-group">
+                    <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-1">
+                        {{ form_widget(form.pdf, {'attr' : {'class' : "btn btn-success" }}) }}
+                    </div>
+                </div>
+            {% else %}
+                <h3></h3>
+            {% endif %}
+            {{ form_widget((form._token)) }}
             {{ form_end(form, {'render_rest': false}) }}
+
         </div>
     </div>
 
