--- a/app/Resources/views/RepEstrategicos/CapturaDatos/rep_cont_servicio.html.twig
+++ b/app/Resources/views/RepEstrategicos/CapturaDatos/rep_cont_servicio.html.twig
@@ -69,7 +69,22 @@
                     {{ form_widget(form.send, {'attr' : {'class' : "btn btn-success" }}) }}
                 </div>
             </div>
-            {{ form_end(form) }}
+            <br />
+
+            {% if data is defined %}
+                {% block previewTable %}
+
+                {% endblock previewTable %}
+                <div class="form-group">
+                    <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-1">
+                        {{ form_widget(form.pdf, {'attr' : {'class' : "btn btn-success" }}) }}
+                    </div>
+                </div>
+            {% else %}
+                <h3></h3>
+            {% endif %}
+            {{ form_widget((form._token)) }}
+            {{ form_end(form, {'render_rest': false}) }}
         </div>
     </div>
 
