--- a/app/Resources/views/RepTacticos/CapturaDatos/rep_semi_res_consumo_agua.html.twig
+++ b/app/Resources/views/RepTacticos/CapturaDatos/rep_semi_res_consumo_agua.html.twig
@@ -33,10 +33,7 @@
                 </div>
             </div>
             <br />
-            <div class="co-md-12 col-sm-12 col-xs-12">
-                <label class="control-label col-md-2 col-sm-2 col-xs-12">Tipo de Cliente: </label>
-                {{ form_widget(form.tipo_cliente) }}
-            </div>
+
             <br />
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="col-md-6 col-sm-6 col-xs-12">
@@ -77,7 +74,23 @@
                     {{ form_widget(form.send, {'attr' : {'class' : "btn btn-success" }}) }}
                 </div>
             </div>
-            {{ form_end(form) }}
+
+
+            {% if data is defined %}
+                {% block previewTable %}
+
+                {% endblock previewTable %}
+                <div class="form-group">
+                    <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-1">
+                        {{ form_widget(form.pdf, {'attr' : {'class' : "btn btn-success" }}) }}
+                    </div>
+                </div>
+            {% else %}
+                <h3></h3>
+            {% endif %}
+            {{ form_widget((form._token)) }}
+            {{ form_end(form, {'render_rest': false}) }}
+
         </div>
     </div>
 
