--- a/app/Resources/views/RepTacticos/CapturaDatos/rep_semi_res_acom_activas.html.twig
+++ b/app/Resources/views/RepTacticos/CapturaDatos/rep_semi_res_acom_activas.html.twig
@@ -62,14 +62,35 @@
                     </div>
                 </div>
             </div>
+
             <div class="form-group"></div>
             <div class="ln_solid"></div>
             <div class="form-group">
-                <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-1">
-                    {{ form_widget(form.send, {'attr' : {'class' : "btn btn-success" }}) }}
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    {{ form_widget(form.send, {'attr' : {'class' : "btn btn-primary" }}) }}
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <button type="button" class="btn btn-default">Anterior</button>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <button type="reset" class="btn btn-danger">Limpiar</button>
                 </div>
             </div>
-            {{ form_end(form) }}
+            <br/>
+            {% if data is defined %}
+                {% block previewTable %}
+
+                {% endblock previewTable %}
+                <div class="form-group">
+                    <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-1">
+                        {{ form_widget(form.pdf, {'attr' : {'class' : "btn btn-success" }}) }}
+                    </div>
+                </div>
+            {% else %}
+                <h3>No existen datos para estos parámetros</h3>
+            {% endif %}
+            {{ form_widget((form._token)) }}
+            {{ form_end(form, {'render_rest': false}) }}
         </div>
     </div>
 
